add filter and routes
